# ur5_teleop_collection

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  cmd.txt  pyproject.toml  pyzed-5.0-cp310-cp310-linux_x86_64.whl  requirements-dev.txt  requirements-legacy-full.txt  requirements.txt
.github/workflows/: ci.yml
config/: defaults.ini
documents/: RealSense D435 相机的配置和使用.md  ZED 2i 相机的配置和使用.md
examples/: README.md
examples/camera/: realsense_d435_preview.py  zed2i_preview.py
src/: main.py  npyread.py  play.ipynb
src/camera_control/: __init__.py  realsense_handler.py  zed_handler.py
src/common/: __init__.py  config_loader.py  logging_utils.py  text_utils.py
src/data_collection/: __init__.py  recorder.py
src/testcode/: gripper.py  test.py  采集2_多过渡点.py
src/ur5_control/: ur5_controller.py
src/xbox/: __init__.py  xbox_control.py
tests/: test_config_loader.py  test_text_utils.py
